添加spring事务的使用

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 jdbc.user=root
 jdbc.password=jk14101
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://127.0.0.1:3306/spring_learn?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+jdbc.jdbcUrl=jdbc:mysql://127.0.0.1:3306/spring_transaction?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 
 jdbc.initPoolSize=5
 jdbc.maxPoolSize=10
